--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -12,7 +12,7 @@
    </p>
    {% endif %}
 
-  <article>
+  <article class="clearfix">
     <a href="/" class="logo">Ten Thousand</a>
 
     {% if linklists.main-menu.links.size > 0 %}
@@ -36,8 +36,6 @@
         {% endfor %}
       </nav>
     {% endif %}
-
-    <div class="clearright"></div>
   </article>
 </header>
 
