Minus Old Checkout

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -1006,302 +1006,6 @@ section.productexplore a {
 
 // End Individual Product Page Styles
 
-// Begin Checkout Page Styles
-
-section.checkout-page {
-  background: $lightgray;
-}
-
-div.checkout-opts {
-  margin: 5em 0 1em;
-}
-
-
-section.checkout-page h3 {
-  margin: 4em 0 2em;
-  padding: 0 0 1em 0;
-  font-weight: 700;
-  border-bottom: 1px solid $black;
-  text-align: center;
-}
-
-aside.login {
-  padding: 0 5em;
-  border-right: 1px solid $strokegray;
-}
-
-aside.guest {
-  padding: 0 5em;
-}
-
-aside.login, aside.guest {
-  display: block;
-  margin: 3em 0 4em;
-  width: 50%;
-  float: left;
-
-  h1 {
-    font-size: 1em;
-    font-weight: 700;
-    letter-spacing: 0.15em;
-    margin: 0 0 1em 0;
-  }
-  a.submitbutton {
-    margin: 1.6em 0 0;
-  }
-}
-
-aside.login h4 {
-  margin: 1em 0 0 0;
-  color: $linkgray;
-  a {
-    color: $linkgray;
-    &:hover {
-      color: $black;
-    }
-  }
-}
-
-
-input.textbox {
-  -webkit-appearance: none;
-  width: 100%;
-  display: block;
-  border-radius: 0;
-  background: $strokegray;
-  padding: 1em;
-  font-family: "ARS Maquette Pro";
-  font-weight: 500;
-  margin: 0 0 0.625em 0;
-  font-size: 0.875em;
-  color: $black;
-  border: 0;
-}
-::-webkit-input-placeholder {
-  text-transform: uppercase;
-}
-:-moz-placeholder {
-  text-transform: uppercase;
-}
-::-moz-placeholder {
-  text-transform: uppercase;;
-}
-:-ms-input-placeholder {
-  text-transform: uppercase;;
-}
-
-
-/* Purchase Steps */
-
-ol.purchase-steps {
-  li.purchase-step {
-    width: 25%;
-    float: left;
-    text-align: center;
-    border-right: 1px solid $strokegray;
-    &:last-child {
-      border-right: none;
-    }
-    &.completed {
-      opacity: 0.55;
-      border-right: 1px solid rgba(0,0,0,0.15);
-    }
-    &.next {
-      opacity: 0.1;
-      border-right: 1px solid $linkgray;
-    }
-  }
-  span.stepnum {
-    width: 22px;
-    height: 22px;
-    text-align: center;
-    line-height: 22px;
-    background: $black;
-    color: white;
-    text-shadow: 0 0 1px rbga(255,255,255,0.1);
-    font-size: 0.75em;
-    font-weight: 700;
-    vertical-align: baseline;
-    display: inline-block;
-  }
-  span.stepname {
-    display: block;
-    font-weight: 500;
-    text-transform: uppercase;
-    text-shadow: 0 0 1px rbga(0,0,0,0.1);
-    letter-spacing: 0.1em;
-    font-size: 0.825em;
-    line-height: 2em;
-  }
-
-}
-
-aside.billinginfo, aside.shippinginfo, aside.confirmationinfo, aside.coupon, aside.summary-final {
-  width: 45%;
-  padding: 0.75em 0 0 0;
-  float: left;
-  input {
-    padding: 1.25em 1em;
-    margin: 0 0 1em !important;
-  }
-  select {
-    &.one {
-      margin: 0 3% 1em 0;
-    }
-    &.exp {
-      width: 48%;
-      display: inline-block;
-    }
-  }
-  input.discountcode {
-    margin: 1em 0;
-  }
-  p {
-    font-size: 0.75em;
-    margin: 0 0 0.5em;
-    color: $typegray;
-    text-transform: uppercase;
-  }
-}
-
-
-div.select-shipping {
-  margin: 1.5em 0 0;
-}
-
-/* Order Summary */
-
-div.order-summary {
-  h3 {
-    margin: 0.25em 0 1em;
-    color: $typegray;
-    border-bottom: 1px solid $strokegray;
-  }
-
-  li.cart-total {
-    font-size: 1rem;
-    padding: 0.5em 1em;
-    margin: 0 0 0.5em 0;
-  }
-
-  p {
-    text-transform: uppercase;
-    font-size: 0.75em;
-  }
-
-  span.total-name {
-    float: left;
-    margin: 0 0 0 90px;
-    font-size: 0.875rem;
-    vertical-align: baseline;
-  }
-
-  span.total-num {
-    color: $black;
-    float: right;
-    font-size: 1rem;
-    vertical-align: baseline;
-  }
-
-  p.purchase-total {
-    margin: 0 0 0.75em;
-  }
-
-  p.final-total {
-    border-top: 1px solid $strokegray;
-    padding: 0.75em 0 0;
-    margin: 1em 0 0;
-  }
-
-  p.final-total span.total-num {
-    font-weight: 700;
-  }
-
-  li.cart-product {
-    border-bottom: 1px solid $strokegray;
-    padding: 0.5em 1em;
-    margin: 0 0 0.5em 0;
-  }
-
-  figure.cart-product-img {
-    width: 65px;
-    height: 65px;
-    float: left;
-  }
-
-  p.cart-product-detail {
-     float: left;
-     line-height: 1.5em;
-     margin: 0.75rem 0 0 1.5rem;
-     }
-     span.name {
-       font-weight: 700;
-       font-size: 0.875rem;
-       display: block;
-       color: $black;
-     }
-
-     span.quantity {
-       margin: 0 0.5rem 0 0;
-       text-transform: none;
-     }
-
-     p.price {
-       font-size: 1rem;
-       float: right;
-       text-align: right;
-     }
-}
-
-
-/* Closed div.order-summary */
-
-
-aside.summary-final {
-  padding: 0 !important;
-}
-
-aside.billinginfo, aside.shippinginfo, aside.confirmationinfo {
-  margin: 0 10% 0 0;
-}
-
-p.secure-transactions {
-  margin: 1em 0 0 !important;
-}
-
-aside.order-completed {
-  width: 100%;
-  background: white;
-  border: 1px solid $strokegray;
-  padding: 6em 15% 8em;
-  margin: 3em auto 2em;
-  h2.productordered {
-    border-bottom: 1px solid $black;
-    padding: 1em 0 0.75em;
-  }
-  span.ordernumber {
-      font-weight: 600;
-      color: $linkgray;
-    }
-  p.success {
-    margin: 2em 0 0 0;
-  }
-  a.account {
-    margin: 2rem 0;
-    padding: 1.5em;
-  }
-}
-
-div.cart-half {
-  width: 48%;
-  float: left;
-  &.half-first {
-    margin: 0 4% 0 0;
-  }
-}
-
-// End Checkout Page Styles
-
 
 
 // Cart Styles
@@ -1319,10 +1023,6 @@ div.cart-half {
 
     &:hover { color: $white; }
   }
-}
-
-input.checkout {
-   font-family: "ars-maquette-web", "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 // Empty Cart Styles
@@ -1446,6 +1146,7 @@ table.shopcart {
       font-weight: 300;
     }
     .checkout {
+      font-family: "ars-maquette-web", "Helvetica Neue", Arial, Helvetica, sans-serif;
       border: 0 none;
       display: table;
       margin: 0 auto;
@@ -1458,6 +1159,7 @@ table.shopcart {
       font-size: 0.813em;
       &:hover {
         background-color: $purple;
+        cursor: pointer;
       }
 
     }
