--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -39,21 +39,27 @@ $(function() {
 <div class="slideshow">
   <ul class="slides">
 
-   <li class="two">
+   <li class="one">
     <div class="outer">
         <h1 class="white">Unite the<br>restless ones</h1>
     </div>
   </li>
 
-  <li class="one">
+  <li class="two">
      <div class="outer">
-      <h1 class="white">Your life<br>Your Journey</h1>
+      <h1 class="white">Dare to be<br>greater</h1>
      </div>
   </li>
 
   <li class="three">
     <div class="outer">
-        <h1 class="white">Dare to be<br>greater</h1>
+        <h1 class="white">Through Every<br>Trial</h1>
+    </div>
+  </li>
+
+  <li class="four">
+    <div class="outer">
+        <h1 class="white">For Life</h1>
     </div>
   </li>
 
@@ -65,27 +71,26 @@ $(function() {
 <section class="homepage">
   <article>
   <aside class="third">
-    <h3>Our Products</h3>
+    <h3>Mission</h3>
+    <a href="pages/mission/">{{ 'bridge_index.jpg' | asset_url | img_tag }}</a>
+     <p>Ten thousand hours or ten thousand miles, we are dedicated to the pursuit of excellence.</p>
+  </aside>
+
+  <aside class="third">
+    <h3>Products</h3>
     <figure>
-      {{ 'shorts.png' | asset_url | img_tag }}
+      <a href="collections/all/">{{ 'shorts.png' | asset_url | img_tag }}</a>
   </figure>
   </aside>
 
   <aside class="third">
-    <h3>Our Mission</h3>
-      <h2>
-      Dare To Be Greater
+    <h3>Gear Refresh</h3>
+    <h2>
+      Our Guarantee
       </h2>
-    <p>We champion the champions, the fighters, the hurdlers of adversity and self-doubt.
+    <p>Each Ten Thousand product is guaranteed for life.
     </p>
-    <a href="mission/" class="btn">Read More</a>
-  </aside>
-
-  <aside class="third">
-    <h3>The 10,000 Kit</h3>
-    <figure>
-      {{ 'kit.png' | asset_url | img_tag }}
-    </figure>
+    <a href="mission/" class="btn">Learn More</a>
   </aside>
   <div class="clear"></div>
   </article>
