--- a/assets/checkout.scss
+++ b/assets/checkout.scss
@@ -248,6 +248,7 @@ body {
 #thumbs h3 {
   font-size: 1rem;
   font-weight: 700;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
   color: black;
   padding: 0 0 0 5.25rem;
