--- a/assets/checkout.scss.liquid
+++ b/assets/checkout.scss.liquid
@@ -120,6 +120,10 @@ body, #info-bar, #addresses, #email, #buttons, #overview, #main  {
   padding: 50px 0px 30px
 }
 
+#header h1 {
+  display: none;
+}
+
 #footer {
   margin-bottom: -20px;
 }
@@ -247,6 +251,7 @@ body {
 
 #thumbs h3 {
   font-size: 1rem;
+  letter-spacing: 0.1em;
   font-weight: 700;
   text-transform: uppercase;
   color: black;
