--- a/assets/style_old.scss
+++ b/assets/style_old.scss
@@ -190,7 +190,7 @@ a.logo {
   display: block;
   width: 18em;
   height: 2.25em;
-  background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/tenthoulogo_lg.png?7110) no-repeat center center;
+  background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/tenthoulogo_lg.png?8601) no-repeat center center;
   background-size: 100%;
   text-indent: -9999px;
   float: left;
@@ -307,7 +307,7 @@ div.closebtn {
   display: none;
   top: 0;
   left: 0;
-  background: $black url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/closebtn_w.svg?7110) no-repeat center center;
+  background: $black url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/closebtn_w.svg?8601) no-repeat center center;
   width: 2em;
   border-radius: 1em;
   height: 2em;
@@ -329,7 +329,7 @@ div.closebtn {
 footer {
   padding: 1em 3em 5em;
   text-transform: uppercase;
-  background: white url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/xlogo.png?7110) no-repeat center 6em;
+  background: white url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/xlogo.png?8601) no-repeat center 6em;
   background-size: 20px 20px;
 }
 
@@ -450,13 +450,13 @@ div.slideshow {
 
 .slides {
   li.one {
-    background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/hero.jpg?7110) center 25%;
+    background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/hero.jpg?8601) center 25%;
   }
   li.two {
-   background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/bridgerun.jpg?7110) center 80%;
+   background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/bridgerun.jpg?8601) center 80%;
   }
   li.three {
-    background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/mission2.jpg?7110) center center;
+    background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/mission2.jpg?8601) center center;
   }
 }
 
@@ -674,7 +674,7 @@ section.mainproduct {
   border-radius: 2em;
   border: 2px solid $black;
   opacity: 0.25;
-  background: transparent url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/zoombtn_k.svg?7110) center center no-repeat;
+  background: transparent url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/zoombtn_k.svg?8601) center center no-repeat;
   background-size: 75% 75%;
   z-index: 20;
   cursor: -webkit-zoom-in;
@@ -727,7 +727,7 @@ h1.title {
 
 section.product-actionshots {
   height: 40em;
-  background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/actionshot.jpg?7110) no-repeat;
+  background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/actionshot.jpg?8601) no-repeat;
   background-size: cover;
 }
 
@@ -760,7 +760,7 @@ select {
   width: 100%;
   display: block;
   border-radius: 0;
-  background: $strokegray url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/arrow.png?7110) 93% center no-repeat;
+  background: $strokegray url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/arrow.png?8601) 93% center no-repeat;
   background-size: 12px 12px;
   padding: 1em;
   font-family: "ars-maquette-web", "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -1315,7 +1315,7 @@ table.shopcart {
     border-radius: 1em;
     height: 1.1em;
     margin: 0 auto;
-    background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/closebtn_w.svg?7110) center center no-repeat;
+    background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/closebtn_w.svg?8601) center center no-repeat;
     &:hover {
       background-color: $almostblack;
     }
@@ -1418,7 +1418,7 @@ table.shopcart {
 
 section.mission {
   height: 60%;
-  background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/mission.jp?7110) no-repeat center 42%;
+  background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/mission.jp?8601) no-repeat center 42%;
   background-size: cover;
   article {
     display: table;
@@ -1436,7 +1436,7 @@ section.mission {
 }
 section.mission2 {
   height: 50em;
-  background: url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/mission2.jpg?7110) no-repeat center center;
+  background: url(//cdn.shopify.com/s/files/1/0251/7377/t/1/assets/mission2.jpg?8601) no-repeat center center;
   background-size: cover;
   h1 {
     margin: 2.5em auto 0;
