--- a/snippets/cart.liquid
+++ b/snippets/cart.liquid
@@ -13,7 +13,7 @@
     <% } else { %>
 
     <section class="cart-disp-full">
-      <article>
+      <article class="clearfix">
 
         <div class="cart-contain">
 
@@ -63,7 +63,6 @@
           </form>
 
         </div>
-        <div class="clear"></div>
       </article>
     </section>
 
