--- a/templates/page.mission.liquid
+++ b/templates/page.mission.liquid
@@ -7,10 +7,10 @@
 <section class="copy">
 
 	<article class="clearfix">
-	<p class="p-single-col">Ten Thousand is about dedication to the past and to the future. Ten thousand hours or ten thousand miles, we are dedicated to the pursuit of excellence over the long haul.</p>
-	<p class="p-single-col">We champion the champions, the fighters, the hurdlers of adversity and self-doubt. Ten Thousand is the finish line we'll never reach, the limit we'll never stop pushing. It is the level playing field that every athlete plays on, the never-ending game where resolve is your only rival.</p>
-	<p class="p-single-col">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas faucibus mollis interdum. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur.</p>
-	<p class="p-single-col">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+	<p class="p-single-col">A quiet revolution is afoot. It is the recognition that a life without challenge is a life without purpose. A movement of do-ers, not be-ers; driven by the desire for conquest over fear, stasis, and self-doubt. Competition is fuel, but it is competition with oneself that liberates potential. Men constantly in pursuit of the next challenge and adventure, hungry to learn.</p> 
+<p class="p-single-col">Life is rich with challenges and fraught with hardship, and nothing prepares us better for that than the intersection of body, mind and heart found in the pursuit of physical betterment. A better version of what you were yesterday mentally, physically, holistically. Our pursuits are varied, but the desire to define ourselves by a competitive, capable and curious spirit is consistent.</p>
+<p class="p-single-col">Glory is found in the triumph over doubt and expectation. Patiently, purposefully, humbly we show up, alone or together, in twos, in tens, in hundreds, out of respect for ourselves and our team, out of appreciation to those who blessed us with strength and spirit, out of duty to those who cannot partake.</p>
+<p class="p-single-col">It’s time for new blood. You know it and we know. Mass-market mediocrity has run amok; celebrity without character, gimmickry without purpose, flash without taste, traditions dishonored by artifice, hype without substance. We’re not suggesting you wear something that is simply more expensive, more highly endorsed or more gimmicky. We’re suggesting you wear what is right and what is essential. Products that can assist you in the full range of pursuits and deliver quietly, consistently, and effectively.</p>
 </section>
 
 <section class="mission mission-two">
