--- a/snippets/cart.liquid
+++ b/snippets/cart.liquid
@@ -6,7 +6,7 @@
     <section class="cart-disp-empty">
       <article>
         <h1>Your cart is empty</h1>
-        <p><a href="products/">Click here to check out our products</a></p>
+        <p><a href="http://ten-thousand.myshopify.com/collections/all">Click here to check out our products</a></p>
       </article>
     </section>
 
