--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -72,8 +72,8 @@ $(function() {
   <article>
   <aside class="third">
     <h3>Mission</h3>
-    <a href="pages/mission/">{{ 'bridge_index.jpg' | asset_url | img_tag }}</a>
      <p>Ten thousand hours or ten thousand miles, we are dedicated to the pursuit of excellence.</p>
+     <a href="pages/mission/" class="btn">Learn More</a>
   </aside>
 
   <aside class="third">
@@ -90,7 +90,7 @@ $(function() {
       </h2>
     <p>Each Ten Thousand product is guaranteed for life.
     </p>
-    <a href="mission/" class="btn">Learn More</a>
+    <a href="pages/gear-refresh" class="btn">Learn More</a>
   </aside>
   <div class="clear"></div>
   </article>
