--- a/templates/page.mission.liquid
+++ b/templates/page.mission.liquid
@@ -54,3 +54,29 @@
 	</article>
 
 </section>
+
+<section class="hero mission mission-three">
+	<article>
+		<h1 class="white mission-hero">Our<br>Values</h1>
+	</article>
+</section>
+
+<section class="copy">
+
+	<article class="clearfix">
+	
+		<ol class="values-list">
+			<li><figure>1</figure><span>Vestibulum id ligula porta felis euismod semper.</span></li>
+			<li><figure>2</figure><span>Duis mollis, est non commodo luctus, nisi erat porttitor.</span></li>
+			<li><figure>3</figure><span>Donec ullamcorper nulla non metus auctor fringilla.</span></li>
+			<li><figure>4</figure><span>Sed odio dui.</span></li>
+			<li><figure>5</figure><span>Vestibulum id ligula porta felis euismod semper.</span></li>
+			<li><figure>6</figure><span>Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</span></li>
+			<li><figure>7</figure><span>Donec ullamcorper nulla non metus auctor fringilla.</span></li>
+			<li><figure>8</figure><span>Lorem ipsum de odio dui.</span></li>
+			<li><figure>9</figure><span>Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</span></li>
+			<li><figure>10</figure><span>Nullam quis risus eget urna mollis ornare vel eu leo.</span></li>
+		</ol>
+
+	</article>
+</section>
